[package]
authors = ["CarlOsterberg <carl.vilhelms.osterberg@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rtic = "0.6.0-rc.4"
# tracing
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
cortex-test-lib = {git = "https://github.com/CarlOsterberg/cortex-klee-test-lib"}
no-std-compat = "0.4.1"

# panic handlers
panic-halt = "0.2.0"
#panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

[dependencies.stm32f4]
version = "0.14.0"
features = ["stm32f411", "rt"]

[dependencies.bkpt-trace]
git = "https://vesuvio-git.neteq.ltu.se/pln/bkpt-trace"
version = "0.1.0"
features = ["linker-plugin-lto"]

[features]
klee-analysis = [
    "klee-sys/klee-analysis"
]
klee-replay = [
    "klee-sys/klee-replay"
]

[dependencies.cstr_core]
version = "0.2.2"
default-features = false

[dependencies.klee-sys]
git = "https://gitlab.henriktjader.com/CarlOsterberg/klee-sys"
version = "0.2.0"

[dependencies.panic-klee]
git = "https://gitlab.henriktjader.com/pln/panic-klee.git"
version = "0.1.0"



# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1   # better optimizations
incremental = false # better optimizaions
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
